--- a/5/5.13.md
+++ b/5/5.13.md
@@ -67,7 +67,7 @@
    |      |         |          |
    |      v         v          |
    |   +-----+   +-----+       |
-   |   | add |   | add |       |
+   |   | add |   | add |       | <--Critical path
    |   +-----+   +-----+       |
    |      |         |          |
    |      v         v          |
