--- a/5/5.14.md
+++ b/5/5.14.md
@@ -4,4 +4,4 @@ The latency limitation for addtion is 1.00.
 
 ### B.
 
-The latency limitation for multiplication is 3.00.
+The number of operation in the critical path doesn't change.
