--- a/5/5.15.md
+++ b/5/5.15.md
@@ -1,2 +1,1 @@
-The throughput limitation for the addition of long is 1.00.
-The calculation for the index needs it.
+We must load 2 values for every element computed, so the lowest CPE is 1 (= 2/2).
