--- a/6/6.45.md
+++ b/6/6.45.md
@@ -1,14 +1,21 @@
-|Block size|Time (s)|
-|---|---|
-|Original|11.265199|
-|1024|7.792067|
-|512|4.043892|
-|256|4.018791|
-|128|4.088951|
-|64|4.409003|
-|32|5.725538|
-|16|5.663777|
-|8|5.238234|
-|4|4.676100|
-|2|6.636709|
-|1|10.658635|
+We split a matrix into several square matrices and transpose them each.
+Ideally, we can reduce cache misses from N^2 + N to N.
+N means the dimension of the matrix.
+
+I measured the time it took to transpose a 1024 * 1024 matrix 1000 times.
+The result are shown below.
+
+| Block size | Time (s)  |
+| ---------- | --------- |
+| original   | 9.248775  |
+| 1024       | 8.812757  |
+| 512        | 4.048950  |
+| 256        | 3.680387  |
+| 128        | 3.475990  |
+| 64         | 3.719718  |
+| 32         | 5.390352  |
+| 16         | 5.471023  |
+| 8          | 5.211244  |
+| 4          | 4.926171  |
+| 2          | 7.076150  |
+| 1          | 13.061631 |
