--- a/6/6.44.md
+++ b/6/6.44.md
@@ -1,3 +1,12 @@
+AMD Ryzen 5 PRO 4650GE
+
+| Cache                | Size       |
+| -------------------- | ---------- |
+| L1 Instruction Cache | 6 x 32 KB  |
+| L1 Data Cache        | 6 x 32 KB  |
+| L2 Cache             | 6 x 512 KB |
+| L3 Cache             | 8 MB       |
+
 
 |       | s1   | s2   | s3   | s4   | s5   | s6   | s7   | s8   | s9   | s10  | s11  | s12  | s13  | s14  | s15  |
 | ----- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
@@ -16,11 +25,8 @@
 | 32k   | 9821 | 9792 | 9733 | 9619 | 9479 | 9562 | 9535 | 9085 | 9083 | 9083 | 9289 | 9083 | 8114 | 9342 | 8719 |
 | 16k   | 9792 | 9734 | 9562 | 9291 | 9342 | 9396 | 9342 | 8517 | 8257 | 9083 | 8256 | 7569 | 8384 | 7785 | 9083 |
 
-AMD Ryzen 5 PRO 4650GE
+![Ridges of temporal locality in the memory moutain.](./ridges_of_temporal_locality_in_the_memory_mountain.png)
+Ridges of temporal locality in the memory moutain. The graph shows a lice with stride = 8.
 
-| Cache                | Size       |
-| -------------------- | ---------- |
-| L1 Instruction Cache | 6 x 32 KB  |
-| L1 Data Cache        | 6 x 32 KB  |
-| L2 Cache             | 6 x 512 KB |
-| L3 Cache             | 8 MB       |
+![A slope of spatial locality.](./a_slope_of_spatial_locality.png)
+A slope of spatial locality. The graph shows a slice with size = 4 MB.
